--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,36 @@
 
+server.port=443
+server.ssl.key-store=classpath:keyOpClient.keystore
+server.ssl.key-store-password=123456
+server.ssl.key-password=123456
+
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.sql.init.platform =mysql
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.sql.init.schema-locations = classpath:dropTables.sql,classpath:createSchema.sql
+spring.sql.init.data-locations=classpath:dataInsert.sql
+#spring.jpa.defer-datasource-initialization = true
+spring.sql.init.mode = always
+
 spring.datasource.url = jdbc:mysql://localhost:3306/client_db
 spring.datasource.username = root
 spring.datasource.password = 123456
-spring.jpa.hibernate.ddl-auto = update
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-spring.jpa.properties.hibernate.show_sql=true
-server.port = 8080
+#spring.jpa.hibernate.ddl-auto = create-drop
+#spring.jpa.properties.hibernate.show_sql=true
+
+
+#server.port = 8080
+
+logging.level.ROOT=INFO
+
+spring.jpa.show-sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql=trace
+
+logging.level.org.springframework.orm.jpa=DEBUG
+logging.level.org.springframework.transaction=DEBUG
+logging.level.org.springframework.cache=TRACE
+
+spring.devtools.restart.enabled=true
+
